test/ui/test/metadata/integer-exceeding-size-limit.stderr
error: the number exceeds the size limit
 --> ${TEST_FOLDER}/metadata/integer-exceeding-size-limit.metadata:2:5
  |
2 |     -9223372036854775809,
  |     ^^^^^^^^^^^^^^^^^^^^
  |
 note: numbers must not be smaller than -2^63

error: the number exceeds the size limit
 --> ${TEST_FOLDER}/metadata/integer-exceeding-size-limit.metadata:3:5
  |
3 |     9223372036854775808,
  |     ^^^^^^^^^^^^^^^^^^^
  |
 note: numbers must not be larger than 2^63 - 1

error: aborting due to 2 previous errors

